# trail-simulator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
companion-ios/: README.md
companion-ios/StepCompanion_temp/: ContentView.swift  HealthWriter.swift  Info.plist  StepClient.swift  StepCompanionApp.swift
controller-ios/: README.md
controller-ios/docs/: api-contract.md  phase-1-verification.md
frontend/static/: app.js  index.html  style.css
scripts/: bootstrap.sh  install.sh  uninstall.sh
scripts/launchd/: com.trail-simulator.app.plist.tmpl  com.trail-simulator.tunneld.plist.tmpl
tests/: test_android_discovery.py  test_android_location.py  test_controller_follow.py  test_controller_freeze.py  test_controller_step_scoping.py  test_cooldown.py  test_device_registry.py  test_discovery.py  test_injector_protocol.py  test_interpolator.py  test_location_client.py  test_main_factory.py  test_multidevice_isolation.py  test_osrm_parse.py  test_reachable_decoupling.py  test_registry_clientid.py  test_registry_sync.py  test_registry_type.py  test_reset.py  test_rest_clientid_follow.py  test_rest_device_routing.py  test_safety.py  test_search.py  test_session_manager.py  test_shutdown_release.py  test_step_fanout_scoping.py  test_ws_clientid.py  test_ws_device_routing.py
trail_simulator/: config.py  geocode.py  main.py
trail_simulator/api/: rest.py  ws.py  ws_steps.py
trail_simulator/device/: android.py  android_location.py  developer_mode.py  discovery.py  injector.py  location.py  multi_location.py  registry.py  tunneld.py
(+77 files in other folders)
