[project]
name = "trail-simulator"
version = "0.1.0"
description = "Mac-controlled iPhone GPS simulator with route pacing and cooldown gating"
requires-python = ">=3.11"
dependencies = [
    "pymobiledevice3>=4.14.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "geographiclib>=2.0",
    "polyline>=2.0.2",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
trail-simulator = "trail_simulator.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trail_simulator*"]
